package SC2_simplify.mainUnit.material;

public interface Lastable {
    public boolean timeOver(int x);
}