package SC2_simplify.mainUnit.material;

public interface Measureable {
    public int getX();

    public int getY();
}