package SC2_simplify.mainUnit.specialFeatures;

public interface Fliable {
    public void fly(int x, int y);
}